<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="view"
            type="com.example.zeew.auth.SignUpViewModel" />

    </data>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:id="@+id/scrollView" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="@dimen/dimen_20dp"
            android:text="@string/join_us"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:background="@drawable/form_backgound"
            android:elevation="@dimen/dimen_5dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/first_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.firstName}"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/last_name"
                android:inputType="text|textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.lastName}"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.email}"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.phoneNumber}"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.password}"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_password"
                android:inputType="text|textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.confirmPassword}"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/referral_code"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={view.referralCode}"
                tools:ignore="Autofill" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/buttonbackground"
            android:hint="@string/join_us"
            android:onClick="@{view::onSignupButtonClick}"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_18sp" />


    </LinearLayout>
    </ScrollView>
</layout>