<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.zeew.ui.auth.AuthViewModel" />

    </data>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:id="@+id/scrollView" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_130dp"
            android:src="@drawable/zeew" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:background="@drawable/form_backgound"
            android:elevation="@dimen/dimen_5dp"
            android:orientation="vertical"
            android:paddingTop="20dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={viewmodel.email}"
                tools:ignore="Autofill" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@={viewmodel.password}"
                tools:ignore="Autofill" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10sp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/backgrounf_sign_in"
            android:hint="@string/sign_in"
            android:onClick="@{viewmodel::onLoginButtonClick}"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account" />

            <TextView
                android:id="@+id/sign_up_clicked"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:text="@string/sign_up"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/forget_password"
            android:textColor="@color/green"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_5dp"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/google_icon"
                android:drawableLeft="@drawable/google_icon"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:text="Sign in with Google"
                android:textAllCaps="false"
                android:textColor="@color/GoogleTextColor"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    </ScrollView>
</layout>